// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsPage adds a new card via form submission and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="items-center justify-items-center min-h-screen p-8 pb-20 gap-16 sm:p-20"
  >
    <div
      class="text-center mb-8"
    >
      <h1
        class="text-2xl font-bold"
      >
        Cards
      </h1>
      <p
        class="text-gray-500"
      >
        Dynamic cards with random content
      </p>
    </div>
    <form
      class="mb-8 text-center"
    >
      <input
        class="border p-2 rounded mr-2 text-black font-bold"
        name="title"
        placeholder="Title"
        type="text"
        value=""
      />
      <input
        class="border p-2 rounded mr-2 text-black font-bold\`"
        name="description"
        placeholder="Description"
        type="text"
        value=""
      />
      <button
        class="px-6 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
        type="submit"
      >
        Add Card
      </button>
    </form>
    <div
      class="grid grid-cols-1 sm:grid-cols-3 gap-8"
    >
      <div
        class="p-4 border rounded shadow-md"
      >
        <h2
          class="text-xl font-semibold"
        >
          New Title
        </h2>
        <p
          class="text-gray-600"
        >
          New Description
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CardsPage renders no cards initially 1`] = `
<DocumentFragment>
  <div
    class="items-center justify-items-center min-h-screen p-8 pb-20 gap-16 sm:p-20"
  >
    <div
      class="text-center mb-8"
    >
      <h1
        class="text-2xl font-bold"
      >
        Cards
      </h1>
      <p
        class="text-gray-500"
      >
        Dynamic cards with random content
      </p>
    </div>
    <form
      class="mb-8 text-center"
    >
      <input
        class="border p-2 rounded mr-2 text-black font-bold"
        name="title"
        placeholder="Title"
        type="text"
        value=""
      />
      <input
        class="border p-2 rounded mr-2 text-black font-bold\`"
        name="description"
        placeholder="Description"
        type="text"
        value=""
      />
      <button
        class="px-6 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
        type="submit"
      >
        Add Card
      </button>
    </form>
    <div
      class="grid grid-cols-1 sm:grid-cols-3 gap-8"
    />
  </div>
</DocumentFragment>
`;
